@@ -84,4 +84,6 @@ SessionSQLPropertiesPanel.removeMultiLineComment=Remove multi line comment (/*..
 SessionObjectTreePropertiesPanel.schemaPrefixNote=(Note: This property only influences Schema display in the Object tree. To configure Schema loading use Alias properties.)
 
 
-SessionSQLPropertiesPanel.tokenizerNotEditableMsg=One or more of the following properties are not editable because they are perdefined by your database specific Plugin. You may be able to change these properties in the Plugin's Globale Preferences.    
+SessionSQLPropertiesPanel.tokenizerNotEditableMsg=One or more of the following properties are not editable because they are perdefined by your database specific Plugin. You may be able to change these properties in the Plugin's Globale Preferences.
+
+generalSessionPropertiesPanel.chkKeepTableLayoutOnRerun=Keep SQL result table layout on rerun SQL
